<resources>
    <string name="app_name">Conversor de Soluções</string>
    <!-- zerando valores -->
    <string name="zero">0</string>
    <!--banner informações -->
    <string name="banner_ad_unit_id"> ca-app-pub-5242902797962945/6935374914 </string>
    <!-- para os sppiners -->
    <string-array name="tipoSoro">
        <item>SF</item>
        <item>SG</item>
        <item>AD</item>
    </string-array>
    <string-array name="ampola">
        <item>NaCl</item>
        <item>KCl</item>
        <item>G</item>
    </string-array>
    <!-- para as labels -->
    <string name="lblPrescrito">Prescrito:</string>
    <string name="lblExistente">Existente:</string>
    <string name="lblConverter">Converter em:</string>
    <string name="lblUtilizar">Utilizar Ampolas de:</string>
    <string name="lblVolume">% e Volume de </string>
    <string name="ml">ml</string>
    <string name="cmdBotao">Converter</string>
    <string name="ou">ou</string>
    <string name="amp">Ampolas</string>
    <string name="extrair">Remover $ ml do frasco disponível.</string>
    <string name="incluir">Incluir $ ml da(s) ampolas de % em # frasco(s) disponível(is)</string>
    <string name="mlOu">ml ou </string>
    <string name="resultado">Resultado:</string>
    <string name="ok">OK</string>
    <string name="proximo">Próximo</string>
    <string name="osmolaridade">Valor da Osmolaridade</string>
    <string name="sobre">Este sistema utiliza formulas reconhecidas na literatura de enfermagem para recalcular
    a conventração de soluções fisiológicas e glicosadas, cabe ao médico a prescrição de tais
    soluções para o paciente.\nNo site www.javamedicalhealth.com.br entra-se todo o tutorial de utilização
    e informações mais detalhadas do calculo.</string>
    <string name="infoProximo">Utilize o botão abaixo para adicionar o tipo de ampola utilizada e permitir o cálculo</string>
</resources>
