<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/resultado"
        android:id="@+id/txtResultado"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/extrair"
        android:id="@+id/txtMenssagem"
        android:layout_below="@+id/txtResultado"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:freezesText="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/incluir"
        android:id="@+id/txtMenssagem2"
        android:layout_below="@+id/txtMenssagem"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:freezesText="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/cmdOK"
        android:layout_below="@+id/txtMenssagem2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <com.google.android.gms.ads.AdView
        android:layout_marginTop="10dp"
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cmdOK"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>