<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblPrescrito"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tblPrimeiro"
        android:layout_height="85dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="3dp">

            <Spinner
                android:id="@+id/spnPrescrito"
                android:entries="@array/tipoSoro"
                android:layout_height="match_parent"
                android:freezesText="true"
                android:layout_width="90dp" />

            <EditText
                android:selectAllOnFocus="true"
                android:inputType="numberDecimal"
                android:ems="3"
                android:id="@+id/txtPorcentoPrescrito"
                android:layout_width="fill_parent"
                android:digits="1234567890."
                android:maxLength="4"
                android:text="@string/zero"
                android:freezesText="true"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/txtVolumeExit"
                android:text="@string/lblVolume"
                android:layout_width="wrap_content"/>

            <EditText
                android:selectAllOnFocus="true"
                android:inputType="number"
                android:ems="4"
                android:digits="1234567890"
                android:maxLength="4"
                android:id="@+id/txtVolumePrescrito"
                android:layout_width="wrap_content"
                android:text="@string/zero"
                android:freezesText="true"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/txtML"
                android:text="@string/ml"
                android:layout_width="wrap_content"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="1dp">

            <TextView
                android:layout_span="5"
                android:text="@string/osmolaridade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPorcentoExistente"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="14dp"
                android:id="@+id/txtOsmolaridadePrescrito" />
        </TableRow>
    </TableLayout>
</RelativeLayout>