<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblExistente"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/layoutExistente">

            <Spinner
                android:id="@+id/spnExistente"
                android:entries="@array/tipoSoro"
                android:freezesText="true"
                android:layout_height="35dp"
                android:layout_width="99dp"
                android:layout_marginTop="20dp" />

            <EditText
                android:selectAllOnFocus="true"
                android:inputType="numberDecimal"
                android:ems="3"
                android:id="@+id/txtPorcentoExistente"
                android:digits="1234567890."
                android:maxLength="4"
                android:text="@string/zero"
                android:freezesText="true"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:imeOptions="actionNext"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/txtVolumeExit"
                android:text="@string/lblVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

            <EditText
                android:selectAllOnFocus="true"
                android:inputType="number"
                android:ems="4"
                android:digits="1234567890"
                android:maxLength="4"
                android:id="@+id/txtVolumeExistente"
                android:text="@string/zero"
                android:freezesText="true"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/txtML"
                android:text="@string/ml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
            <TextView
                android:layout_span="5"
                android:text="@string/osmolaridade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutExistente"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="14dp"
                android:id="@+id/txtOsmolaridadeExistente" />

</RelativeLayout>